--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>It's Koyel's Birthday</title>
     <head >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel = "icon" href = "" type = "image/x-icon">
+        <link rel = "icon" href = "https://raw.githubusercontent.com/koyelkibday/koyelkibday.github.io/main/Screenshot_20210423-205958_Gallery-removebg-preview.png" type = "image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
         <h1><img id="center" src="https://see.fontimg.com/api/renderfont4/lddX/eyJyIjoiZnMiLCJoIjo3NiwidyI6MTI1MCwiZnMiOjYxLCJmZ2MiOiIjQzM4QTA2IiwiYmdjIjoiIzAwMDAwMCIsInQiOjF9/SGFwcHkgQmlydGhkYXkgS295ZWw/ji-solid-balloon-caps.png" width="550" height="100"></h1>
     </head>
